# athena-signal

./: .clang-format  .clang-format-ignore  .gitlab-ci.yml  CMakeLists.txt
athena_signal/kernels/: dios_ssp_api.c  dios_ssp_api.h  dios_ssp_return_defs.h
athena_signal/kernels/dios_ssp_doa/: dios_ssp_doa_api.c
athena_signal/kernels/dios_ssp_gsc/: dios_ssp_gsc_api.c  dios_ssp_gsc_beamsteering.c
athena_signal/kernels/dios_ssp_mvdr/: dios_ssp_mvdr_api.c  dios_ssp_mvdr_header.c
athena_signal/kernels/dios_ssp_share/: dios_ssp_share_cinv.c
athena_signal/kernels/dios_ssp_vad/: dios_ssp_vad_energy.c
examples/: athena_signal_bf_example.c
samples/: athena_signal_aec_bf_agc_sample.c  athena_signal_aec_sample.c  athena_signal_agc_sample.c  athena_signal_bf_sample.c  athena_signal_doa_sample.c  athena_signal_hpf_sample.c  athena_signal_vad_sample.c
samples/data/: beamforming_mic_coord.txt
scripts/: clang_format_check.sh
testing/: cppcheck_results.xml  stress_test.sh
testing/cppcheck_report/: 0.html  1.html  10.html  11.html  12.html  13.html  14.html  15.html  16.html  17.html  18.html  19.html  2.html  20.html  21.html  22.html  23.html  24.html  25.html  26.html  27.html  28.html  29.html  3.html  30.html  31.html  32.html  33.html  34.html  4.html  5.html  6.html  7.html  8.html  9.html  index.html  stats.html
testing/data/: aec_output.pcm  agc_output.pcm  beamforming_1nan_3m_sound_0_noise_60_gsc_output.pcm  beamforming_1nan_3m_sound_0_noise_60_mvdr_output.pcm  doa_mic_coord.txt  hpf_output.pcm
